--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
             <h3 class="place__website__url-heading">
               URL
             </h3>
-            <a href="" class="place__website__link">Test</a>
+            <a href="http://park-kosa.ru" class="place__website__link link">park-kosa.ru</a>
           </div>
-          <img src="./images/place-kosa.jpg" alt="" class="place__image">
+          <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image">
           <p class="place__paragraph">
             Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.
           </p>
@@ -84,9 +84,9 @@
             <h3 class="place__website__url-heading">
               URL
             </h3>
-            <a href="" class="place__website__link">Test</a>
+            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website__link link">National Geographic</a>
           </div>
-          <img src="./images/place-kolsky.jpg" alt="" class="place__image">
+          <img src="./images/place-kolsky.jpg" alt="Кольский" class="place__image">
           <p class="place__paragraph">
             Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
           </p>
@@ -102,9 +102,9 @@
             <h3 class="place__website__url-heading">
               URL
             </h3>
-            <a href="" class="place__website__link">Test</a>
+            <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__website__link link">Facebook</a>
           </div>
-          <img src="./images/place-altai.jpg" alt="" class="place__image">
+          <img src="./images/place-altai.jpg" alt="Алтай" class="place__image">
           <p class="place__paragraph">
             Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.
           </p>
@@ -120,9 +120,9 @@
             <h3 class="place__website__url-heading">
               URL
             </h3>
-            <a href="" class="place__website__link">Test</a>
+            <a href="https://vk.com/baikalmile" class="place__website__link link">https://vk.com/baikalmile</a>
           </div>
-          <img src="./images/place-winter-baikal.jpg" alt="" class="place__image">
+          <img src="./images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
           <p class="place__paragraph">
             Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
           </p>
@@ -138,16 +138,16 @@
             <h3 class="place__website__url-heading">
               URL
             </h3>
-            <a href="" class="place__website__link">Test</a>
+            <a href="http://vodlozero.ru" class="place__website__link link">http://vodlozero.ru/</a>
           </div>
-          <img src="./images/place-karelia.jpg" alt="" class="place__image">
+          <img src="./images/place-karelia.jpg" alt="Карелия" class="place__image">
           <p class="place__paragraph">
             Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
           </p>
         </div>
       </section>
       <section class="cover">
-        <a class="cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <a class="cover__title link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
           До Байкала «на собаках»
         </a>
         <p class="cover__subtitle">
@@ -166,5 +166,3 @@
   </div>
 </body>
 </html>
-
-<!-- Добавить альты -->
