--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             Куршская коса            
           </h2>
           <div class="place__website">
-            <h3 class="place__website__url-heading">
+            <h3 class="place__website_url-heading">
               URL
             </h3>
-            <a href="http://park-kosa.ru" class="place__website__link link">park-kosa.ru</a>
+            <a href="http://park-kosa.ru" class="place__website_link link">park-kosa.ru</a>
           </div>
           <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image">
           <p class="place__paragraph">
@@ -73,10 +73,10 @@
             Кольский            
           </h2>
           <div class="place__website">
-            <h3 class="place__website__url-heading">
+            <h3 class="place__website_url-heading">
               URL
             </h3>
-            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website__link link">National Geographic</a>
+            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website_link link">National Geographic</a>
           </div>
           <img src="./images/place-kolsky.jpg" alt="Кольский" class="place__image">
           <p class="place__paragraph">
@@ -91,10 +91,10 @@
             Алтай            
           </h2>
           <div class="place__website">
-            <h3 class="place__website__url-heading">
+            <h3 class="place__website_url-heading">
               URL
             </h3>
-            <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__website__link link">Facebook</a>
+            <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__website_link link">Facebook</a>
           </div>
           <img src="./images/place-altai.jpg" alt="Алтай" class="place__image">
           <p class="place__paragraph">
@@ -109,10 +109,10 @@
             Зимний Байкал            
           </h2>
           <div class="place__website">
-            <h3 class="place__website__url-heading">
+            <h3 class="place__website_url-heading">
               URL
             </h3>
-            <a href="https://vk.com/baikalmile" class="place__website__link link">https://vk.com/baikalmile</a>
+            <a href="https://vk.com/baikalmile" class="place__website_link link">https://vk.com/baikalmile</a>
           </div>
           <img src="./images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
           <p class="place__paragraph">
@@ -127,10 +127,10 @@
             Карелия           
           </h2>
           <div class="place__website">
-            <h3 class="place__website__url-heading">
+            <h3 class="place__website_url-heading">
               URL
             </h3>
-            <a href="http://vodlozero.ru" class="place__website__link link">http://vodlozero.ru/</a>
+            <a href="http://vodlozero.ru" class="place__website_link link">http://vodlozero.ru/</a>
           </div>
           <img src="./images/place-karelia.jpg" alt="Карелия" class="place__image">
           <p class="place__paragraph">
