--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <header class="header">
       <img src="./images/header-logo.svg" alt="Лого" class="header__logo">
       <div class="header__lang-links">
-        <h3 class="header__lang-link">Ru</h3>        
-        <h3 class="header__lang-link">En</h3>
+        <a href="#" class="header__lang-link header__lang-link_active link">Ru</a>        
+        <a href="#" class="header__lang-link link">En</a>
       </div>    
     </header>
     <main class="content">
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <img src="images/lead-polka.jpg" alt="" class="lead__image">
+        <img src="images/lead-polka.jpg" alt="Полка" class="lead__image">
         <p class="lead__caption">ВАША ПОЛКА — ВЕРХНЯЯ</p>       
       </section>
       <section class="intro">
@@ -51,9 +51,7 @@
       </section>
       <section class="places">
         <div class="place">
-          <h2 class="place__title">
-            Куршская коса            
-          </h2>
+          <h2 class="place__title">Куршская коса&nbsp;</h2>
           <div class="place__website">
             <h3 class="place__url-heading">
               URL
@@ -139,20 +137,20 @@
         </div>
       </section>
       <section class="cover">
-        <a class="cover__title link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-          До Байкала «на собаках»
-        </a>
-        <p class="cover__subtitle">
-          По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
-        </p>
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__background" >  
+            <h2 class="cover__title">До Байкала «на собаках»</h2> 
+            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p> 
+         </a> 
       </section>
     </main>
     <footer class="footer">
-        <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
-        <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
-        <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
-        <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
-        <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+      <nav class="footer__links">
+        <a href="https://yandex.ru/maps" class="footer__link link">Карты</a>
+        <a href="https://yandex.ru/pogoda" class="footer__link link">Погода</a>
+        <a href="https://rasp.yandex.ru" class="footer__link link">Расписание</a>
+        <a href="https://calendar.yandex.ru" class="footer__link link">Календарь</a>
+        <a href="https://travel.yandex.ru" class="footer__link link">Путешествия</a>
+      </nav>
         <p class="footer__copyright">&copy; 2022. Логвинов Илья</p>
     </footer>
   </div>
